added session storage for username

--- a/views/patient_dashboard.hbs
+++ b/views/patient_dashboard.hbs
@@ -18,7 +18,7 @@
     <!-- Nested grid container that stores buttons-->
     <div id="patient-dashboard-grid-container-nested">
         <a href="/patient/record_health" class="button01">Record Health</a>
-        <button class="button01 purple1">View History</button>
+        <a href="/patient/history" class="button01 purple1">View History</a>
         <a href="leaderboard" class="button01">Leaderboard</a>
         <button class="button01 purple3">Settings</button>
     </div>
