--- a/views/patient_history.hbs
+++ b/views/patient_history.hbs
@@ -1,3 +1,10 @@
 <head>PATIENT HISTORY HERE</head>
 {{#each data}}
-<h1>{{this}}</h1>
+
+    <div>{{date}}</div>
+    <div>{{time}}</div>
+    <div>{{dataType}}</div>
+    <div>{{value}}</div>
+    <div>{{comment}}</div>
+
+{{/each}}
