moved /record_health route from app.js to patientRouter. Modified function in appcontroller

--- a/views/thankyou_page.hbs
+++ b/views/thankyou_page.hbs
@@ -6,7 +6,7 @@
         <img src="../assets/thankyou_image.png" class= "thankyouimg">
 
             <div class="thankyou-buttons">
-                <a class="ty-button purple1" href="record_health">Add Another Entry</a>
+                <a class="ty-button purple1" href="/patient/record_health">Add Another Entry</a>
                 <a class="ty-button purple2" href="patient_dashboard">Return to Dashboard</a>
             </div>
         </div>
