update error page

--- a/views/error_page.hbs
+++ b/views/error_page.hbs
@@ -6,6 +6,7 @@
     </section>
     <section>
         <br>
+         <a href="{{buttonURL}}" class="backURL">{{buttonText}}</a> 
     </section>
     <br>
 </div>
