--- a/views/patient_specifics.hbs
+++ b/views/patient_specifics.hbs
@@ -109,18 +109,28 @@
 
     <div class="patient-specifics-notes-container">
         <h2>Clinical Notes for {{profileData.username}}</h2>
-
+        <br>
+        {{#if clinicianNote}}
         <div class="clinician-notes">
-            <div class="clinician-notes-cell">Date Entered</div>
+            <div class="clinician-notes-cell">Date</div>
+            <div class="clinician-notes-cell">Time</div>
             <div class="clinician-notes-cell">Note</div>
-            <div class="clinician-notes-cell">11/01/22 3:00 PM</div>
-            <div class="clinician-notes-cell">This is a hardcoded test note. We need to connect this page to the
-                database.</div>
+        </div>
+        {{else}}
+            <h4>No Notes</h4>
+        {{/if}}
+        <div class="clinician-notes scroll">
+            
+            {{#each clinicianNote}}
+            <div class="clinician-notes-cell">{{this.date}}</div>
+            <div class="clinician-notes-cell">{{this.time}}</div>
+            <div class="clinician-notes-cell">{{this.note}}</div>
+            {{/each}}
         </div>
         <br>
         <h3>Enter new note</h3>
-        <form action="/">
-            <input type="text" id="clinicanNote" name="cNote" placeholder="Start typing here...">
+        <form method="POST" action="/submit_note/{{profileData.username}}">
+            <input type="text" id="cNote" name="cNote" placeholder="Start typing here..." required>
             <input class="todo" type="submit" value="Submit Note">
         </form>
 
