--- a/views/patient_specifics.hbs
+++ b/views/patient_specifics.hbs
@@ -17,8 +17,6 @@
             <!-- HTML related to the clickable 'Adjust Time Series' button-->
             <button data-modal-target="#modal" class="button04 purple2">Adjust Time-Series</button>
 
-
-
             <form method="POST" action="/post_time_series/{{profileData.username}}">
                 <div class="modal" id="modal">
                     <div class="modal-header">
@@ -32,7 +30,8 @@
                         <p class="popup-table-title">Upper Limit</p>
 
                         <label class="checkbox">
-                            <input class="input-checkbox" name="checkbox" id="checkbox_bg" value="blood_glucose" type="checkbox">
+                            <input class="input-checkbox" name="checkbox" id="checkbox_bg" value="blood_glucose"
+                                type="checkbox">
                             Blood Glucose (nmol/L)
                         </label>
                         <div class="popup-input-box-container">
@@ -43,7 +42,8 @@
                         </div>
 
                         <label class="checkbox">
-                            <input class="input-checkbox" name="checkbox" id="checkbox_weight" value="weight" type="checkbox">
+                            <input class="input-checkbox" name="checkbox" id="checkbox_weight" value="weight"
+                                type="checkbox">
                             Weight (kg)
                         </label>
                         <div class="popup-input-box-container">
@@ -66,7 +66,8 @@
                         </div>
 
                         <label class="checkbox">
-                            <input class="input-checkbox" name="checkbox" id="checkbox_insulin" value="insulin" type="checkbox">
+                            <input class="input-checkbox" name="checkbox" id="checkbox_insulin" value="insulin"
+                                type="checkbox">
                             Num. Doses
                         </label>
                         <div class="popup-input-box-container">
@@ -82,7 +83,11 @@
                 </div>
             </form>
 
-            <button class="button04 purple1">Message</button>
+            {{!-- <button class="button04 purple1"
+                onclick="location.href='/clinician_dashboard/{{profileData.username}}/patient_message'">Support
+                Message</button> --}}
+
+
             <div id="backgroundMasker"></div>
             <script src="../scripts/script.js"></script>
 
@@ -108,6 +113,16 @@
     </div>
 
     <div class="patient-specifics-notes-container">
+        <h2>Support Message for {{profileData.username}}</h2>
+        
+        <h3>Update message</h3>
+        <form method="POST" action="/clinician_dashboard/post_submit_msg/{{profileData.username}}">
+            <input type="text" id="cMsg" name="cMsg" placeholder="Start typing here..." required>
+            <input class="todo" type="submit" value="Submit Note">
+        </form>
+    </div>
+
+    <div class="patient-specifics-notes-container">
         <h2>Clinical Notes for {{profileData.username}}</h2>
         <br>
         {{#if clinicianNote}}
@@ -117,10 +132,10 @@
             <div class="clinician-notes-cell">Note</div>
         </div>
         {{else}}
-            <h4>No Notes</h4>
+        <h4>No Notes</h4>
         {{/if}}
         <div class="clinician-notes scroll">
-            
+
             {{#each clinicianNote}}
             <div class="clinician-notes-cell">{{this.date}}</div>
             <div class="clinician-notes-cell">{{this.time}}</div>
