--- a/views/patient_specifics.hbs
+++ b/views/patient_specifics.hbs
@@ -17,7 +17,7 @@
             <!-- HTML related to the clickable 'Adjust Time Series' button-->
             <button data-modal-target="#modal" class="button04 purple2">Adjust Time-Series</button>
 
-            <form method="POST" action="/post_time_series/{{profileData.username}}">
+            <form method="POST" action="/clinician_dashboard/post_time_series/{{profileData.username}}">
                 <div class="modal" id="modal">
                     <div class="modal-header">
                         <div class="title">Required Time-Series</div>
