move POST route for setting clinician note to appController

--- a/views/patient_specifics.hbs
+++ b/views/patient_specifics.hbs
@@ -144,7 +144,7 @@
         </div>
         <br>
         <h3>Enter new note</h3>
-        <form method="POST" action="/submit_note/{{profileData.username}}">
+        <form method="POST" action="/clinician_dashboard/submit_note/{{profileData.username}}">
             <input type="text" id="cNote" name="cNote" placeholder="Start typing here..." required>
             <input class="todo" type="submit" value="Submit Note">
         </form>
