--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -511,6 +511,25 @@ background-color: #F7F7F7;
     /* background-color: antiquewhite; */
 }
 
+.dataToRecord {
+    display: flex;
+    min-height: 40px;
+    max-width: 400px;
+    border-radius: 38px;
+    background-color: #72A6E8;
+    color: white;
+    filter: drop-shadow(4px 4px 3px #D4D4D4);
+    margin: 3%;
+    font-size: 24px;
+    /* font-weight: bold; */
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    padding: 1% 3% 1% 3%;
+    border:none;
+}
+
+
 .button01 {
     display: flex;
     min-height: 90px;
@@ -538,28 +557,31 @@ background-color: #F7F7F7;
 
 .button02 {
     border-radius: 38px;
-    max-width: 400px;
+    max-width: 950px;
     background-color: #A13376;
     color: white;
     filter: drop-shadow(4px 4px 3px #D4D4D4);
     margin: 3%;
+    padding: 5%;
     text-align: center;
-    grid-row-start: 2;
-    grid-column-start: 2;
+    grid-row-start: 4;
+    grid-column-start: 1;
+    grid-column-end: 3;
     grid-row-end: 4;
     border:none;
-    cursor:pointer;
     transition: all 0.5s ease 0s;
 }
 .button02:hover {
     background-color: #8a3ee2;
-    transform: scale(1.05);
     /*font-size: 22px;*/
 }
 .patient-dashboard-notifications-text{
-    margin-left: 5%;
+    margin-left: 2%;
     color: #72A6E8;
     font-size: 24px;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
 }
 
 .button03 {
@@ -1586,10 +1608,16 @@ input[id=username], input[id=psw] {
         grid-row-start: 1;
     }
 
+    .dataToRecord {
+        grid-column-start: 1;
+
+    }
+
     .button02 {
         grid-column-start: 1;
         grid-row-start: 5;
-        grid-row-end: 5;
+        grid-row-end: 7;
+        padding: 5%;
         min-height: 124px;
     }
 
