--- a/views/leaderboard.hbs
+++ b/views/leaderboard.hbs
@@ -9,17 +9,17 @@
 <!-- Need to replace pat_username with his username and replace other usernames-->
     <div class="leaderboard-image-flex">
         <div class="place">
-            <img src="../assets/2nd.png" class="place-icon">
+            <img src="../assets/2nd.png" class="second-icon">
             <p class="user-labels">pat_username</p>
         </div>
 
         <div class="place">
-            <img src="../assets/1st.png" class="1st-icon">
+            <img src="../assets/1st.png" class="first-icon">
             <p class="user-labels">username_1</p>
         </div>
 
         <div class="place">
-            <img src="../assets/3rd.png" class="place-icon">
+            <img src="../assets/3rd.png" class="third-icon">
             <p class="user-labels">username_2</p>
         </div>
     </div>
