--- a/views/leaderboard.hbs
+++ b/views/leaderboard.hbs
@@ -29,7 +29,14 @@
     <div class="top-5-container">
         <h2 class="top-title">Top 5</h2>
 
-        <div class="top-1">
+        {{#each rank}}
+        <div class="top-others">
+            <p class="board-label">{{inc @index}}</p>
+            <p class="board-label">{{this._id}}</p>
+            <p class="user-score">{{this.count}}</p>
+        </div>
+        {{/each}}
+        {{!-- <div class="top-1">
             <img src="../assets/1-label.png" class="board-icon">
             <p class="board-label">Username_1</p>
             <p class="user-score">95%</p>
@@ -57,7 +64,7 @@
             <img src="../assets/5-label.png" class="board-icon">
             <p class="board-label-2">Username_1</p>
             <p class="user-score-2">77%</p>
-        </div>
+        </div> --}}
 
     </div>
 
