--- a/views/patient_dashboard.hbs
+++ b/views/patient_dashboard.hbs
@@ -19,7 +19,7 @@
     <div id="patient-dashboard-grid-container-nested">
         <a href="/patient/record_health" class="button01">Record Health</a>
         <a href="/patient/history" class="button01 purple1">View History</a>
-        <a href="leaderboard" class="button01">Leaderboard</a>
+        <a href="/patient/leaderboard" class="button01">Leaderboard</a>
         <button class="button01 purple3">Settings</button>
     </div>
 </div>
