Leaderboard ranking now based on correct engagement rate calculation

--- a/views/leaderboard.hbs
+++ b/views/leaderboard.hbs
@@ -32,8 +32,8 @@
         {{#each rank}}
         <div class="top-others">
             <p class="board-label">{{inc @index}}</p>
-            <p class="board-label">{{this._id}}</p>
-            <p class="user-score">{{this.count}}</p>
+            <p class="board-label">{{username}}</p>
+            <p class="user-score">{{engagementRate}}%</p>
         </div>
         {{/each}}
         {{!-- <div class="top-1">
