--- a/views/comments.hbs
+++ b/views/comments.hbs
@@ -31,7 +31,9 @@
         </div>
 
         <div class="comments-table-cell">
-            <div class="comments-table-cell-text">{{username}}</div>
+            <a href="/clinician_dashboard/patient/{{username}}">
+                <div class="comments-table-cell-text cell-text-bold">{{username}}</div>
+            </a>
         </div>
 
         <div class="comments-table-cell">
