--- a/views/comments.hbs
+++ b/views/comments.hbs
@@ -1,6 +1,7 @@
 <br>
 <h1 class="clinician-title">All Patient Comments</h1>
 
+
 <div class="comments-grid-container">
     <div class="comments-grid-table">
 
@@ -38,7 +39,13 @@
 
         <div class="comments-table-cell">
             <div class="comments-table-cell-text">{{comment}}</div>
-            <div class="comments-table-cell-link">View Attached Data ></div>
+            {{!-- <div class="comments-table-cell-link">View Attached Data ></div> --}}
+
+
+                {{!-- <div class="comments-table-cell-link" onclick="location.href='/clinician_dashboard/patient/{{username}}'">View Attached Data</div> --}}
+                <div class="comments-table-cell-link" onclick="location.href='/clinician_dashboard/entry/{{_id}}'">View Attached Data > </div>
+
+
         </div>
         {{/each}}
 
