working on comments page

--- a/views/attached_data.hbs
+++ b/views/attached_data.hbs
@@ -19,13 +19,11 @@
         <div class="patient-specifics-table-header">No. Insulin Doses</div>
         <div class="patient-specifics-table-header">Exercise (Steps)</div>
 
-        {{#each patientValues}}
         <div class="patient-specifics-table-data">{{date}}</div>
-        <div class="patient-specifics-table-data">{{measured_glucose}}</div>
-        <div class="patient-specifics-table-data">{{measured_weight}}</div>
-        <div class="patient-specifics-table-data">{{measured_insulin}}</div>
-        <div class="patient-specifics-table-data">{{measured_exercise}}</div>
-        {{/each}}
+        <div class="patient-specifics-table-data">{{glucose}}</div>
+        <div class="patient-specifics-table-data">{{weight}}</div>
+        <div class="patient-specifics-table-data">{{insulin}}</div>
+        <div class="patient-specifics-table-data">{{exercise}}</div>
     </div>
 </div>
 
