--- a/views/patient_specifics.hbs
+++ b/views/patient_specifics.hbs
@@ -2,7 +2,7 @@
 
 
 <div id="patient-specifics-topbar">
-    <h2 id="username">Clinical Record for {{profileData.username}}</h2>
+    <h1 id="username">Clinical Record for {{profileData.username}}</h1>
 </div>
 
 
@@ -113,7 +113,7 @@
     </div>
 
     <div class="patient-specifics-notes-container">
-        <h2>Support Message for {{profileData.username}}</h2>
+        <p class="blue-heading-medium">Support Message for {{profileData.username}}</p>
         {{profileData.support_msg}}
         <h3>Set new message</h3>
         <form method="POST" action="/clinician_dashboard/post_submit_msg/{{profileData.username}}">
@@ -123,7 +123,7 @@
     </div>
 
     <div class="patient-specifics-notes-container">
-        <h2>Clinical Notes for {{profileData.username}}</h2>
+        <p class="blue-heading-medium">Clinical Notes for {{profileData.username}}</p>
         <br>
         {{#if clinicianNote}}
         <div class="clinician-notes">
@@ -152,15 +152,16 @@
     </div>
 </div>
 
+<br>
 <div class="patient-specifics-overview-container">
-    <h2 class="patient-specifics-grid-title">Overview of {{profileData.username}}'s Health Data</h2>
+    {{!-- <h2 class="patient-specifics-grid-title blue-text">Overview of {{profileData.username}}'s Health Data</h2> --}}
 
     <div class="patient-specifics-graph">
-        <h2>Statistical Graph</h2>
+        <h2 class="blue-text">Statistical Graph</h2>
     </div>
 
     <div class="patient-specifics-month">
-        <h2>Monthly Overview</h2>
+        <h2 class="blue-text">Monthly Overview</h2>
     </div>
 </div>
 <br>
