--- a/views/attached_data.hbs
+++ b/views/attached_data.hbs
@@ -1,6 +1,15 @@
 {{!-- <h1 class="clinician-title">Entry Data for {{username}}</h1> --}}
 
 <div id="patient-specifics-topbar">
+    <p class="topbar-tree">
+        <a href="../" class="ul-text">Clinician Dashboard</a>
+        <p class="topbar-tree"> > </p>
+        <a href="/clinician_dashboard/comments" class="ul-text">All Patient Comments</a>
+        <p class="topbar-tree"> > </p>
+        <a href="" class="ul-text">Attached Entry Data</a>
+        
+        
+
     <h1>Entry Data for {{username}}</h1>
 </div>
 
