added topbar tree for all clinician pages

--- a/views/comments.hbs
+++ b/views/comments.hbs
@@ -1,5 +1,18 @@
 <br>
-<h1 class="clinician-title">All Patient Comments</h1>
+
+<div id="patient-specifics-topbar">
+    <p class="topbar-tree">
+        <a href="../clinician_dashboard" class="ul-text">Clinician Dashboard</a>
+        <p class="topbar-tree"> > </p>
+        <a href="/clinician_dashboard/comments" class="ul-text">All Patient Comments</a>
+    </p>
+    <h1>All Patient Comments</h1>
+</div>
+
+
+
+
+{{!-- <h1 class="clinician-title">All Patient Comments</h1> --}}
 
 
 <div class="comments-grid-container">
