--- a/views/patient_specifics.hbs
+++ b/views/patient_specifics.hbs
@@ -2,6 +2,11 @@
 
 
 <div id="patient-specifics-topbar">
+        <p class="topbar-tree">
+        <a href="../" class="ul-text">Clinician Dashboard</a>
+        <p class="topbar-tree"> > </p>
+        <a href="" class="ul-text">Clinician Record for {{profileData.username}}</a>
+    </p>
     <h1 id="username">Clinical Record for {{profileData.username}}</h1>
 </div>
 
