--- a/views/login_page.hbs
+++ b/views/login_page.hbs
@@ -8,7 +8,7 @@
                 {{/each}}
                 <div class="login_container">
                     <label for="uname"><b>Username</b></label>
-                    <input id="username" type="text" placeholder="Enter Email" name="username">
+                    <input id="username" type="text" placeholder="Enter Username" name="username">
 
                     <label for="psw"><b>Password</b></label>
                     <input id="psw" type="password" placeholder="Enter Password" name="password">
