--- a/views/patient_change_pwd.hbs
+++ b/views/patient_change_pwd.hbs
@@ -3,7 +3,7 @@
         <div class="settings-form-container">
             <form class="detailsform" action="/" method="post">
             <div class="innerbound">
-                <img src="placeholder-image.png" class= "placeholderimg">
+                <img src="../assets/placeholder-image.png" class= "placeholderimg">
                 
                 <div class="settings_container">
                 <h2 class="settings_heading">Account Details</h2>
