link settings button to patient dash

--- a/views/patient_dashboard.hbs
+++ b/views/patient_dashboard.hbs
@@ -21,7 +21,7 @@
         <a href="/patient/history" class="button01 purple1">View History</a>
         <a href="/patient/leaderboard" class="button01">Leaderboard</a>
         <!--<button class="button01 purple3">Settings</button>-->
-        <a href="/patient/patient_change_pwd" class="button01 purple3">Settings</a>
+        <a href="/patient/settings" class="button01 purple3">Settings</a>
     </div>
 </div>
 <br>
