added routes to get to clinician edit profile

--- a/views/clinician_dashboard.hbs
+++ b/views/clinician_dashboard.hbs
@@ -2,6 +2,10 @@
 <br>
 <h1 class="clinician-title">Patient Overview</h1>
 
+<button class="patient-button purple2" onclick="location.href='/clinician_dashboard/edit'">EDIT PROFILE</button>
+<button class="patient-button purple2" onclick="location.href='/clinician_dashboard/settings'">PROFILE SETTINGS</button>
+
+
 <div class="topbar">
     <div class="searchbar">
         <div class="search-icon">
