--- a/views/patient_change_pwd.hbs
+++ b/views/patient_change_pwd.hbs
@@ -1,7 +1,7 @@
 <body>
     <h1 class="page_heading">Settings</h1>
         <div class="settings-form-container">
-            <form class="detailsform" action="/" method="post">
+            <form class="detailsform" action="/change_pwd" method="post">
             <div class="innerbound">
                 <img src="../assets/placeholder-image.png" class= "placeholderimg">
                 
