--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2210,3 +2210,49 @@ input[id=firstname], input[id=lastname], input[id=Username], input[id=psw] {
     padding: 2% 10% 2% 10%;
 
 }
+
+/* Clinician  Tab Styling*/
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+  }
+  
+  /* Style buttons tab content */
+  .tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+  }
+  
+  /* Background color of buttons on hover */
+  .tab button:hover {
+    background-color: #ddd;
+  }
+  
+  /* Active/current tablink class */
+  .tab button.active {
+    background-color: #ccc;
+  }
+  
+  /* tab content */
+  .tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+  }
+
+  .tabcontent {
+    animation: fadeEffect 1s; /* Fading effect takes 1 second */
+  }
+  
+  /* Go from zero to full opacity */
+  @keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
